"fixed create group error message and alignment"

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -156,7 +156,9 @@ html, body{
 
 
 #savechangesbutton {
-    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
   
 }
 
@@ -273,9 +275,16 @@ html, body{
   color: red;
   font-size: 20px;
   text-align: center;
-  margin: 10%;
+  margin: auto;
 }
-
+.createGroupResponseContainer {
+  height: 70%;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+}
 
 
 
